# updater-gitplucker

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: INTEGRATION.md
examples/: basic.py
src/gitplucker/: __init__.py  config.py  errors.py  events.py  fsutil.py  models.py  planner.py  state.py  updater.py  version.py
src/gitplucker/backend/: __init__.py  github_api.py
src/gitplucker/merge/: __init__.py  three_way.py
src/gitplucker/sources/: __init__.py  base.py  github_release.py  github_source.py
src/gitplucker/strategies/: __init__.py  base.py  package.py  selective.py  whole_app.py
src/gitplucker/triggers/: __init__.py  background.py  manual.py  startup.py
tests/: test_commits.py  test_config.py  test_deps.py  test_merge.py  test_planner.py  test_review.py  test_rollback.py  test_selective.py
